Created CV generation strategy